style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');

body {
    background:rgb(231, 230, 228);
    font-family: 'Barlow', sans-serif;
    margin-top: 5vh;
}

p {
    margin: unset;
}

#content-holder {
    display: flex;
    height: 390px;
    justify-content: center;
    background-color: #e7e6e4;
}

#heading-container {
    background:rgb(231, 230, 228);
    color: black;
    font-weight: bolder;
    width: 100%;
    padding: 0.3rem;
    /* border-radius: 5px;
    border: 2px solid rgb(89,89,89); */
    display: flex;
    /* justify-content: center; */
    margin: auto;
}
/* 
#datepicker {
    width: 308px;
    margin: 0.3rem auto;
    text-align: center;
    border: 2px solid rgb(89,89,89);
    border-radius: 2%;
} */

#picker-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0.4rem auto 0.1rem auto
}

#results-container {
    /* background:rgb(231,230,228); */
    font-weight: unset;
    width: 295px;
    /* min-height: 20px; */
    /* height: 45%; */
    text-align: center;
    padding: 0.5rem;
    /* border-radius: 5px; */
    /* border: 2px solid rgb(89,89,89); */
    margin: auto;
}

.results {
    margin: auto;
    padding: 0 1rem;
    text-align: justify;
    line-height: 24px;
}

#form-container {
    background:#e7e6e4;
    /* font-weight: bolder; */
    width: 295px;
    text-align: center;
    padding: 0.5rem;
    /* border-radius: 2%; */
    /* border: 2px solid rgb(89,89,89); */
    margin: 0.3rem auto;
    height: 50%;
}

#javascript_form {
    display: inline-block;
}

#javascript_form .p_details {
    width: 80%;
    margin: 0.2rem auto;
    height: 2rem;
    border: 2px solid grey;
}

#javascript_form .p_details::placeholder {
    color: lightgrey;
    padding-left: 5px;
}

.terms-link {
    color: #b38a4c;
}

#refresh-button {
    width: 15%;
    height: 2rem;
    background-color: #b38a4c;
    /* border-radius: 5px; */
    color: #e7e6e4;
    border: unset;
    font-size: larger;
    /* margin-top: 0.3rem; */
    /* border: 2px solid rgb(89,89,89); */
}

#js_send {
    width: 60%;
    height: 2rem;
    background-color: #b38a4c;
    /* border-radius: 5px; */
    color: #e7e6e4;
    font-size: larger;
    /* margin-top: 0.3rem; */
    border: unset;
}

#js_send:hover, #refresh-button:hover {
    transition: 1.5ms;
    background: #e7e6e4;
    color: rgb(89,89,89);
    border: 2px solid rgb(89,89,89);
}

a {
    text-decoration: none;
    color: #75582d;
}

#details {
    display: flex;
    font-size: smaller;
    margin: 0.5rem 1rem;
}

#checkbox {
    font-size: x-large;
}

#details p {
    margin: 0.3rem auto;
}

.hide {
    display: none;
}

.show {
    display: flex;
}

.result {
    color: black;
    font-weight: bolder;
}

.brown {
    color: #b38a4c;
    font-weight: 600;
}

.top-padding {
    padding-top: 0.5rem;
}

.in-range {
    color: red;
}

